update api to be backed by sqlite database: - sqlalchemy and marshmallow integration - separate code to populate database + include a standalone script to handle this - model the Person object - update the swagger yml file to be driven by person_id instead of last_name - verify CRUD operations on Person resource
